--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">RxMVP</string>
     <string name="common_error">糟糕，加载失败···</string>
     <string name="click_retry">点击重试</string>
+    <string name="share">分享</string>
+    <string name="love">喜欢</string>
+    <string name="more">更多</string>
 </resources>
