Rejected commit: Default

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="share">分享</string>
     <string name="love">喜欢</string>
     <string name="more">更多</string>
+    <string name="once">点击标题的图标可以快速返回顶部哦,点击右下角的按钮可以分享图库中的图片，试试吧！！！！</string>
 </resources>
